--- a/ui/style.css
+++ b/ui/style.css
@@ -344,3 +344,6 @@ textview.view.fancy>scrolledwindow.completion {
   border-top: 1px solid alpha(grey, 0.7);
 }
 
+box.col-spacing {
+  border-spacing: 1em;
+}
