--- a/ui/profile-page.ui
+++ b/ui/profile-page.ui
@@ -45,7 +45,7 @@
                   <class name="view" />
                 </style>
                 <child>
-                  <object class="AspectImage" id="banner_image">
+                  <object class="CbAspectImage" id="banner_image">
                     <property name="visible">1</property>
                     <property name="can-focus">False</property>
                   </object>
