ProfilePage: Improve info listbox styling

--- a/ui/profile-page.ui
+++ b/ui/profile-page.ui
@@ -245,6 +245,9 @@
                 <property name="selection-mode">none</property>
                 <child>
                   <object class="GtkListBoxRow" id="num_tweets_row">
+                    <style>
+                      <class name="info" />
+                    </style>
                     <child>
                       <object class="GtkBox">
                         <child>
@@ -266,6 +269,9 @@
 
                 <child>
                   <object class="GtkListBoxRow" id="num_media_row">
+                    <style>
+                      <class name="info" />
+                    </style>
                     <child>
                       <object class="GtkBox">
                         <child>
@@ -287,6 +293,9 @@
 
                 <child>
                   <object class="GtkListBoxRow" id="num_followers_row">
+                    <style>
+                      <class name="info" />
+                    </style>
                     <child>
                       <object class="GtkBox">
                         <child>
@@ -308,6 +317,9 @@
 
                 <child>
                   <object class="GtkListBoxRow" id="num_following_row">
+                    <style>
+                      <class name="info" />
+                    </style>
                     <child>
                       <object class="GtkBox">
                         <child>
@@ -329,6 +341,9 @@
 
                 <child>
                   <object class="GtkListBoxRow" id="num_lists_row">
+                    <style>
+                      <class name="info" />
+                    </style>
                     <child>
                       <object class="GtkBox">
                         <child>
