--- a/ui/style.css
+++ b/ui/style.css
@@ -17,14 +17,12 @@ avatar>container.avatar-round {
   padding: 2px 4px;
 }
 
-.topbar button image,
-.topbar .button GtkImage {
+.topbar button image {
   -gtk-icon-shadow: none;
   color: #ddd;
 }
 
-.topbar button,
-.topbar .button {
+.topbar button {
   border: none;
   box-shadow: none;
   background-image: none;
@@ -34,19 +32,15 @@ avatar>container.avatar-round {
   margin: 0px;
 }
 
-.topbar button:hover,
-.topbar .button:hover {
+.topbar button:hover {
   background-color: shade(@topbar_bg, 1.3);
 }
 
-
-.topbar button:checked,
-.topbar .button:checked {
+.topbar button:checked {
   background-color: shade(@topbar_bg, 1.5);
 }
 
-.topbar button .badge,
-.topbar .button .badge {
+.topbar button .badge {
   background-color: shade(blue, 1.4);
   background-image: none;
   text-shadow: 0px 1px 1px #FFF;
@@ -55,8 +49,7 @@ avatar>container.avatar-round {
   padding: 3px 2px;
 }
 
-.topbar button .badge:backdrop,
-.topbar .button .badge:backdrop {
+.topbar button .badge:backdrop {
   background-color: grey;
 }
 
