--- a/ui/tweet-info-page.ui
+++ b/ui/tweet-info-page.ui
@@ -67,11 +67,14 @@
                         <child>
                           <object class="GtkBox">
                             <child>
-                              <object class="TextButton" id="name_button">
+                              <object class="GtkButton" id="name_button">
                                 <property name="visible">True</property>
                                 <property name="halign">start</property>
                                 <property name="valign">baseline</property>
                                 <signal name="clicked" handler="name_button_clicked_cb" swapped="no"/>
+                                <style>
+                                  <class name="user-name" />
+                                </style>
                               </object>
                             </child>
                             <child>
