--- a/ui/search-page.ui
+++ b/ui/search-page.ui
@@ -46,7 +46,7 @@
         <property name="margin-top">5</property>
         <property name="hscrollbar-policy">never</property>
         <child>
-          <object class="TweetListBox" id="tweet_list">
+          <object class="CbTweetListBox" id="tweet_list">
             <property name="visible">True</property>
             <property name="can-focus">False</property>
             <property name="selection-mode">none</property>
