style: Add some left margin to the time-delta label
Which is important for long user names that push the screen_name label
all the way to the right.

--- a/ui/style.css
+++ b/ui/style.css
@@ -308,6 +308,10 @@ row.tweet>label.text {
   margin-top: 0.5em;
 }
 
+row.tweet label.time-delta {
+  margin-left: 0.5em;
+}
+
 row.tweet>box.quote {
  padding-left: 0.5em;
  margin-top: 1em;
