--- a/ui/list-statuses-page.ui
+++ b/ui/list-statuses-page.ui
@@ -215,6 +215,7 @@
             <child>
               <object class="GtkBox">
                 <property name="orientation">vertical</property>
+                <property name="hexpand">1</property>
                 <child>
                   <object class="GtkStack" id="name_stack">
                     <property name="margin-start">3</property>
