--- a/ui/user-filter-entry.ui
+++ b/ui/user-filter-entry.ui
@@ -42,6 +42,8 @@
                   <object class="GtkLabel" id="name_label">
                     <property name="halign">start</property>
                     <property name="margin-bottom">1</property>
+                    <property name="ellipsize">end</property>
+                    <property name="xalign">0</property>
                     <property name="yalign">1</property>
                     <property name="hexpand">1</property>
                     <attributes>
