--- a/ui/modify-snippet-dialog.ui
+++ b/ui/modify-snippet-dialog.ui
@@ -35,6 +35,7 @@
           <object class="GtkGrid">
             <property name="column-spacing">12</property>
             <property name="row-spacing">6</property>
+            <property name="margin">6</property>
             <child>
               <object class="GtkLabel">
                 <property name="label" translatable="yes">Keyword</property>
@@ -95,6 +96,7 @@
             </child>
             <child>
               <object class="GtkButton" id="delete_button">
+                <property name="visible">0</property>
                 <property name="label" translatable="yes">Delete</property>
                 <signal name="clicked" handler="delete_button_clicked_cb"/>
               </object>
